--- a/src/app/pages/home/buckets/buckets.scss
+++ b/src/app/pages/home/buckets/buckets.scss
@@ -1,6 +1,7 @@
 @import 'mixins/triangle';
 @import 'mixins/responsive';
 @import 'pattern-library/core/pattern-library/headers';
+@import 'mixins/placeholder-selectors';
 
 .buckets-section {
     display: grid;
@@ -8,6 +9,7 @@
     padding: 0 $normal-margin;
 
     .bucket {
+        border-radius: 0.3rem;
         color: text-color(white);
         max-width: 100%;
 
@@ -16,7 +18,10 @@
         }
 
         &.our-impact {
-            background-color: os-color(gray);
+            @extend %light-on-dark;
+
+            background-color: ui-color(footer-bg);
+            order: 2;
 
             > .image {
                 background-position: center center;
@@ -30,7 +35,7 @@
                     @include triangle(
                         $direction: right,
                         $position: top 27% right -2.4rem,
-                        $color: os-color(gray),
+                        $color: ui-color(footer-bg),
                         $size: 2.4rem
                     );
 
@@ -38,23 +43,19 @@
                         @include triangle(
                             $direction: top,
                             $position: top -2.4rem right 5rem left auto,
-                            $color: os-color(gray),
+                            $color: ui-color(footer-bg),
                             $size: 2.4rem
                         );
                     }
-                }
-
-                .title {
-                    color: os-color(light-blue);
                 }
             }
         }
 
         &.partners {
-            background-color: os-color(orange);
-            background-image: url('/images/home/buckets/partners.jpg');
-            background-repeat: no-repeat;
-            background-size: cover;
+            @extend %light-on-dark;
+
+            background-color: os-color(deep-green);
+            order: 1;
         }
 
         .quote {
@@ -65,6 +66,14 @@
 
             > div {
                 max-width: 100%;
+            }
+        }
+
+        .btn {
+            @extend %button;
+
+            &.primary {
+                @extend %primary;
             }
         }
     }
