Tutor books get Atom icon instead of Laptop
and say Go to OpenStax Tutor instead of View online
Issue #881

--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -13,10 +13,11 @@
                     <a href="{model.webviewLink}" data-local="{model.isRex}"
                         _target="{model.isTutor ? '_blank' : ''}"
                         tabindex="{model.submenu === '' ? 0 : -1}" data-submenu="{model.submenu}">
-                        <span class="fa fa-laptop"></span>
                         <if condition="model.isTutor">
+                            <span class="fa fa-atom"></span>
                             <span class="text">Go to OpenStax Tutor</span>
                         <else>
+                            <span class="fa fa-laptop"></span>
                             <span class="text">View online</span>
                         </if>
                     </a>
