Update homepage to feature Tutor (#1740)
* Update homepage to feature Tutor

Issue #1017

* Postpone feature box changes

Move changes related to quotes (feature boxes) into a holding folder and restore original versions.

* More Q3 changes

On APUSH page, no Tutor logo, no callout

--- a/src/app/pages/home/quotes/quotes.scss
+++ b/src/app/pages/home/quotes/quotes.scss
@@ -13,6 +13,7 @@
 
     .quote-bucket {
         background-color: ui-color(white);
+        border-radius: 0.3rem;
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(50%, auto));
 
