eliminate 30x redirects due to missing trailing slash

--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -206,7 +206,7 @@ $gradient-sequence: ui-color(white), ui-color(white) 50%, transparent;
                 }
 
                 .title-image {
-                    max-height: 100%;
+                    height: 100%;
                 }
 
                 .title-logo {
