--- a/src/app/pages/details/details-tab/details-tab.html
+++ b/src/app/pages/details/details-tab/details-tab.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
         </if>
-        <if condition="model.bookState === 'live'">
+        <if condition="['live', 'new_edition_available', 'deprecated'].includes(model.bookState)">
             <div class="loc-errata">
                 <h3>Errata</h3>
                 <p data-html="errataBlurb"></p>
