--- a/src/app/pages/details/phone-view/phone-view.scss
+++ b/src/app/pages/details/phone-view/phone-view.scss
@@ -37,4 +37,25 @@
             }
         }
     }
+
+    .errata-pane {
+        display: grid;
+        grid-gap: 2rem;
+        padding: 0 2rem 2rem;
+
+        .button-group {
+            display: grid;
+            grid-gap: 1rem;
+        }
+
+        .btn {
+            @extend %button;
+
+            background-color: ui-color(white);
+
+            &.secondary {
+                @extend %secondary;
+            }
+        }
+    }
 }
