Show OER Commons box on mobile instructor resources
Issue #1139

--- a/src/app/pages/details/phone-view/instructor-resources-pane/instructor-resources-pane.scss
+++ b/src/app/pages/details/phone-view/instructor-resources-pane/instructor-resources-pane.scss
@@ -46,6 +46,10 @@
         .resource-box {
             width: 20rem;
 
+            &.double {
+                width: 30rem;
+            }
+
             > .top {
                 max-height: 30rem;
                 overflow: hidden;
