--- a/src/app/pages/details/resource-box/resource-box.scss
+++ b/src/app/pages/details/resource-box/resource-box.scss
@@ -35,6 +35,12 @@
 
     &.double {
         grid-column: span 2;
+
+        @include width-up-to($phone-max) {
+            .blurb {
+                display: none;
+            }
+        }
     }
 
     .new-label-container {
