--- a/src/app/components/shell/header/main-menu/dropdown/dropdown.scss
+++ b/src/app/components/shell/header/main-menu/dropdown/dropdown.scss
@@ -9,14 +9,15 @@
     height: 0;
     overflow: visible;
     position: absolute;
-}
+    top: 100%;
 
-// Keeps rightmost menu from hanging off the screen
-.rightmost .dropdown-container {
-    right: -$normal-margin;
+    // Keeps rightmost menu from hanging off the screen
+    &.rightmost {
+        right: -$normal-margin;
 
-    @include width-up-to($tablet-max) {
-        right: auto;
+        @include width-up-to($tablet-max) {
+            right: auto;
+        }
     }
 }
 
@@ -26,7 +27,6 @@
     background-color: ui-color(white);
     color: os-color(gray);
     display: none;
-    left: 0;
     padding: 1rem;
     width: auto;
 
