--- a/src/app/pages/details/resource-box/resource-box.scss
+++ b/src/app/pages/details/resource-box/resource-box.scss
@@ -11,9 +11,18 @@
     flex-direction: column;
     height: 100%;
     justify-content: space-between;
+    overflow: hidden;
     padding: $normal-margin 1.8rem;
     position: relative;
     text-decoration: none;
+
+    &.video {
+        cursor: pointer;
+
+        video {
+            pointer-events: none;
+        }
+    }
 
     &.coming-soon::before {
         @include coming-soon;
@@ -59,6 +68,21 @@
             font-weight: bold;
             padding: 0.5rem;
         }
+    }
+
+    .reference-number {
+        align-content: center;
+        background-color: os-color(light-blue);
+        color: text-color(white);
+        display: grid;
+        font-size: 1.4rem;
+        font-weight: bold;
+        height: 1.5rem;
+        justify-content: center;
+        left: 0;
+        position: absolute;
+        top: 0;
+        width: 1.5rem;
     }
 
     .top-line {
@@ -114,5 +138,25 @@
 
     .fa-download {
         color: os-color(green);
+    }
+
+    .fa-play {
+        color: os-color(red);
+    }
+
+    .fa-link {
+        color: text-color(link);
+    }
+}
+
+.instructor-resource-video-viewer {
+    display: grid;
+    justify-content: center;
+    padding: 2rem;
+    width: 100%;
+
+    video {
+        max-width: 100%;
+        width: 72rem;
     }
 }
