Port press page to React
Issue #1792

--- a/src/app/components/more-fewer/more-fewer.scss
+++ b/src/app/components/more-fewer/more-fewer.scss
@@ -8,9 +8,34 @@
         cursor: pointer;
     }
 
-    .more:not([hidden]),
-    .fewer:not([hidden]) {
+    .fewer,
+    headline-paginator {
         display: grid;
-        grid-gap: 4rem;
+        grid-row-gap: 4rem;
+    }
+}
+
+.headline-paginator {
+    display: grid;
+    grid-row-gap: 4rem;
+
+    .excerpt {
+        display: none;
+    }
+
+    .nav-buttons {
+        display: flex;
+        justify-content: space-between;
+
+        > div {
+            align-items: center;
+            display: grid;
+            grid-gap: 0.8rem;
+            grid-template-columns: auto 1fr;
+        }
+
+        [role="presentation"] {
+            opacity: 0.5;
+        }
     }
 }
