--- a/src/app/pages/press/mobile-selector/mobile-selector.scss
+++ b/src/app/pages/press/mobile-selector/mobile-selector.scss
@@ -21,6 +21,7 @@
         position: fixed;
         top: 0;
         width: 100vw;
+        z-index: 1;
 
         [role="menu"] {
             @include body-font(2.4rem);
