--- a/src/app/pages/interest/interest.scss
+++ b/src/app/pages/interest/interest.scss
@@ -18,6 +18,7 @@
     .page-2 {
         display: grid;
         grid-gap: 4rem;
+        margin-bottom: 4rem;
 
         > .form-input > .control-group {
             margin-bottom: 0;
